[package]
name = "mshv-c"
version = "0.1.0"
edition = "2021"

[dependencies]
mshv-ioctls = { git = "https://github.com/rust-vmm/mshv.git" }
hypervisor = {git ="https://github.com/cloud-hypervisor/cloud-hypervisor.git", features = ["mshv"]}

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.26.0"

[package.metadata.build]
output_dir = "./"